2006-01-16  James Willcox  <james@ximian.com>

	* src/Banshee.Base/SourceManager.cs: proxy add/remove events to
	the main thread.
	* src/Banshee.Plugins/Daap/DaapCore.cs: hash on the service name
	instead of the whole service object.
	* src/Banshee.Plugins/Daap/daap-sharp/*: synced

2006-01-16  Aaron Bockover  <aaron@aaronbock.net>

	* src/PlayerInterface.cs: Add the global actions accelerator group to
	the main window (BGO #326923)
	
	* src/Banshee.Base/Plugins/PluginDialog.cs: Wrapped missing string for
	translation (Øivind Hoel)

2006-01-16  Stephane Raimbault  <stephane.raimbault@free.fr>

	reviewed by: Aaron Bockover  <aaron@aaronbock.net>

	* src/Banshee.Plugins/Audioscrobbler/AudioscrobblerConfigDialog.cs:
	Marked a string to translate
	
	* src/Banshee.Plugins/FileSystemMonitor/Makefile.am: Deleted some
	bad tabs
	
	* src/Banshee.Plugins/MetadataSearch/MetadataSearchConfigDialog.cs:
	Fixed a typo s/MusizBrainz/MusicBrainz/

2006-01-14  Aaron Bockover  <aaron@aaronbock.net>

	* engagged-sharp/Ogg/Util/OggInfoReader.cs: bitrate calculation fix

	* src/PlayerInterface.cs: Added tooltips back to shuffle/repeat/edit 
	buttons at bottom of window (BGO #326045); pressing enter in search
	entry focuses playlust (BGO #326568); fixed minor cosmetic bug regarding
	icon sizes of action buttons; moved gettext catalog init to Globals so
	catalog is initialized before the ActionManager is populated (BGO #325705)

	* src/TrackProperties.c: Minor bitrate calculation fix

	* src/Banshee.Base/ActionManager.cs: Use more stock items when acceptable

	* src/Banshee.Base/Globals.cs: Initialize the gettext catalog (BGO #325705)
	
	* src/Banshee.Widgets/ActionButton.cs: Add support for a default icon
	size in the constructor 

	* src/Banshee.Base/AmazonCoverFetcher.cs: Set timeout to 10 seconds

	* src/Banshee.Plugins/MetadataSearch/MetadataSearchPlugin.cs: Do not
	use ThreadAssist for the processing thread so operations on the thread