@@ -1,3 +1,11 @@
+2006-01-16  James Willcox  <snorp@snorp.net>
+
+	* src/Banshee.Plugins/Daap/DaapConfigPage.cs: only change the service
+	name on focus out, instead of on each individual change.
+	* src/Banshee.Plugins/Daap/DaapCore.cs: don't show the service that
+	banshee itself exposes, and do a lame job at attempting to handle
+	service name collisions.
+
 2006-01-16  James Willcox  <james@ximian.com>
 
 	* src/Banshee.Base/SourceManager.cs: proxy add/remove events to
